fixed email issues

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-EMAIL_USER=nicolejohnso111@gmail.com
-EMAIL_PASS=qnod cbua akkf rsyx
+EMAIL_USER=nicolej.network@gmail.com
+EMAIL_PASS=PasswordPumpkin44!!
