--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-EMAIL_USER=nicolej.network@gmail.com
-EMAIL_PASS=PasswordPumpkin44!!
+EMAIL_USER= Nicolej.network@gmail.com
+EMAIL_PASS= mijq qrkv zupg aqdw
