--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,7 @@
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
+      "config": { "distDir": "build" }
     },
     {
       "src": "server/app.js",
@@ -14,7 +12,7 @@
     }
   ],
   "rewrites": [
-  { "source": "/api/(.*)", "destination": "/server/app.js" },
-  { "source": "/(.*)", "destination": "/client/build/index.html" }
-]
+    { "source": "/api/(.*)", "destination": "/server/app.js" },
+    { "source": "/(.*)", "destination": "/client/build/index.html" }
+  ]
 }
